# Multimodel-Agentic-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-entrypoint.sh  langgraph.json  main.py  pyproject.toml  requirements.txt  streamlit_app.py
chatui/: package-lock.json  package.json
chatui/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
chatui/src/components/: ChatArea.module.css  ChatArea.tsx  CitationsPanel.module.css  CitationsPanel.tsx  DocumentUpload.module.css  DocumentUpload.tsx  MessageBubble.module.css  MessageBubble.tsx  Sidebar.module.css  Sidebar.tsx
chatui/src/context/: ChatContext.tsx
chatui/src/lib/: mockApi.ts  types.ts
data/raw/: agent plan.docx  claude_prompt.txt  streaming.md
docs/: SETUP.md  architecture.excalidraw
run/: 01-unstructured.md  02-chunking-unstructured.md  chunking.py  embeddings.ipynb  embeddings_qdrant.ipynb  generation.py  main.ipynb  main.py  qdrantcloud.py  qdranttest.py  runllm.py  runpipeline.ipynb  vectorstore.py
src/: model_providers.py  pipeline.py  runllm.py
src/agents/: langgraph_app.py  prompts.py  rag_agent.py
src/ingestion/: chunkers.py
src/retrieval/: retriever.py  vector_store.py
